# clustduct

./: .gitignore  Bugs.md  COPYING  Makefile.am  Readme.md  Salt.md  Usage.md  bfcommons.lua  check_lease.sh  clustduct.lua  clustduct.sh  configure.ac  magic_bullet.sh  reference.md  write_bf.lua
configs/: clustduct.conf  default  grub.cfg  grub_iptemplate  pxe_iptemplate
doc/: default.example  default.pxe  dnsmasq.example  genders.example  query.lua
docs/: README.md  default.example  genders.example
kiwi-descriptions/SUSE/x86_64/sle-hpc-15.1-JeOS/: config.xml
kiwi-descriptions/SUSE/x86_64/sle-hpc-15.3-JeOS/: config.sh  config.xml
kiwi-descriptions/SUSE/x86_64/sles-15-JeOS/: config.xml
kiwi-descriptions/SUSE/x86_64/sles-15.1-JeOS/: config.xml
kiwi-descriptions/SUSE/x86_64/sles-15.1-JeOS/root/etc/systemd/system/: RegisterFirst.service
kiwi-descriptions/SUSE/x86_64/suse-15.1-JeOS/: config.xml
kiwi-descriptions/SUSE/x86_64/suse-leap-15.0-JeOS/root/etc/sysconfig/network/: dhcp
kiwi-descriptions/openSUSE/x86_64/leap-hpc-15.0-JeOS/: config.xml
kiwi-descriptions/openSUSE/x86_64/leap-hpc-15.3-JeOS/: config.xml
kiwi-descriptions/openSUSE/x86_64/suse-leap-15.0-JeOS/: config.xml
pillar/: cluster.sls  top.sls
salt/: ethers.sls  grub-boot.sls  hosts.sls
src/: bfcommons.lua  clustduct.lua  prepare_tftp.sh  simple-clustduct.lua  write_bf.lua
srv/pillar/: cluster.sls  images.sls  mac.sls  top.sls
srv/salt/: add_nodes.sls  hosts.sls
srv/salt/clustduct/: README
